force-app/main/default/objects/Opportunity/fields/Account_OfficeName__c.field-meta.xml
<CustomField>
    <fullName>Account_OfficeName__c</fullName>
    <formula>Account.OfficeName__c</formula>
    <label>取引先事業所</label>
    <type>Text</type>
</CustomField>