force-app/main/default/objects/Opportunity/fields/AccountRemarks__c.field-meta.xml
<CustomField>
    <fullName>AccountRemarks__c</fullName>
    <label>取引先備考</label>
    <type>TextArea</type>
</CustomField>