force-app/main/default/objects/Opportunity/fields/AdoptedSpecification__c.field-meta.xml
<CustomField>
    <fullName>AdoptedSpecification__c</fullName>
    <label>当社優位性</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>技術優位性(当社のみ対応可)</fullName>
            </value>
            <value>
                <fullName>積算精度</fullName>
            </value>
            <value>
                <fullName>総合評価点</fullName>
            </value>
            <value>
                <fullName>優位性なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>