force-app/main/default/objects/Opportunity/fields/AdoptedSpecificationRemarks__c.field-meta.xml
<CustomField>
    <fullName>AdoptedSpecificationRemarks__c</fullName>
    <label>優位性 備考</label>
    <type>TextArea</type>
</CustomField>