force-app/main/default/objects/Opportunity/fields/after1__c.field-meta.xml
<CustomField>
    <fullName>after1__c</fullName>
    <formula>CASE( 
  MOD( CloseDate  - DATE( 1900, 1, 7 ), 7 ),
  5, CloseDate  + 2 + 1,
  6, CloseDate  + 1 + 1,
  CloseDate  + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注予定日の1営業日後</label>
    <type>Date</type>
</CustomField>