force-app/main/default/objects/Opportunity/fields/after2__c.field-meta.xml
<CustomField>
    <fullName>after2__c</fullName>
    <formula>CASE( 
  MOD( CloseDate  - DATE( 1900, 1, 7 ), 7 ),
  4, CloseDate  + 2 + 2,
  5, CloseDate  + 2 + 2,
  6, CloseDate  + 1 + 2,
  CloseDate  + 2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注予定日の2営業日後</label>
    <type>Date</type>
</CustomField>