force-app/main/default/objects/Opportunity/fields/after3__c.field-meta.xml
<CustomField>
    <fullName>after3__c</fullName>
    <formula>CASE( 
  MOD( CloseDate  - DATE( 1900, 1, 7 ), 7 ),
  3, CloseDate  + 2 + 3,
  4, CloseDate  + 2 + 3,
  5, CloseDate  + 2 + 3,
  6, CloseDate  + 1 + 3,
  CloseDate  + 3
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注予定日の3営業日後</label>
    <type>Date</type>
</CustomField>