force-app/main/default/objects/Opportunity/fields/Agency_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Agency_Remarks__c</fullName>
    <label>代理店 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>