force-app/main/default/objects/Opportunity/fields/AgencyName__c.field-meta.xml
<CustomField>
    <fullName>AgencyName__c</fullName>
    <formula>Agency__r.Name</formula>
    <label>代理店</label>
    <type>Text</type>
</CustomField>