force-app/main/default/objects/Opportunity/fields/ArchitectOffice__c.field-meta.xml
<CustomField>
    <fullName>ArchitectOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>設計事務所</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>登録/選択した取引先が事業所レコードタイプではありません。
取引先を新規作成する場合は、事業所として登録してください。</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>案件 (設計事務所)</relationshipLabel>
    <relationshipName>Accounts19</relationshipName>
    <type>Lookup</type>
</CustomField>