force-app/main/default/objects/Opportunity/fields/ArchitectOffice_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ArchitectOffice_Remarks__c</fullName>
    <label>設計事務所 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>