force-app/main/default/objects/Opportunity/fields/AutoCalculateCheck__c.field-meta.xml
<CustomField>
    <fullName>AutoCalculateCheck__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>チェック有⇒場所明細の金額項目更新の都度、「発行CP」「発行WC」「回収予定金額」 の①②③ がリセットされ場所別数値の集計値が各項目の①に自動挿入されます。</inlineHelpText>
    <label>発行・回収予定 自動計算</label>
    <type>Checkbox</type>
</CustomField>