force-app/main/default/objects/Opportunity/fields/BidDecisionMethod__c.field-meta.xml
<CustomField>
    <fullName>BidDecisionMethod__c</fullName>
    <label>落札決定方式</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BiddingMethod__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>価格競争方式</fullName>
            </value>
            <value>
                <fullName>総合評価方式（技術提案なし）</fullName>
            </value>
            <value>
                <fullName>総合評価方式（技術提案あり）</fullName>
            </value>
            <value>
                <fullName>プロポーザル方式</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>