force-app/main/default/objects/Opportunity/fields/BiddingMethod__c.field-meta.xml
<CustomField>
    <fullName>BiddingMethod__c</fullName>
    <label>入札方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一般競争入札</fullName>
            </value>
            <value>
                <fullName>指名競争入札</fullName>
            </value>
            <value>
                <fullName>公募型指名競争入札</fullName>
            </value>
            <value>
                <fullName>随意契約</fullName>
            </value>
            <value>
                <fullName>公募型随意契約</fullName>
            </value>
            <value>
                <fullName>企画競争入札</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>