force-app/main/default/objects/Opportunity/fields/BranchPriority__c.field-meta.xml
<CustomField>
    <fullName>BranchPriority__c</fullName>
    <label>支社優先順位</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>