force-app/main/default/objects/Opportunity/fields/CentralRemoteMonitoring__c.field-meta.xml
<CustomField>
    <fullName>CentralRemoteMonitoring__c</fullName>
    <inlineHelpText>場所別保存時に自動で設定されます。場所別で以下製品のいずれかが選択されていれば&quot;あり&quot;を自動選択。中央監視MACTUS300／その他中央監視制御装置／中央監視MACTUS500／テレメータ／中央監視MELFLEX／中央監視MACTUS700</inlineHelpText>
    <label>中央監視・遠制</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>