force-app/main/default/objects/Opportunity/fields/CentralRemoteMonitoringMemo__c.field-meta.xml
<CustomField>
    <fullName>CentralRemoteMonitoringMemo__c</fullName>
    <label>中央監視・遠制 備考</label>
    <type>TextArea</type>
</CustomField>