force-app/main/default/objects/Opportunity/fields/ChallengeRequest__c.field-meta.xml
<CustomField>
    <fullName>ChallengeRequest__c</fullName>
    <label>ﾁｬﾚﾝｼﾞ 希望</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>