force-app/main/default/objects/Opportunity/fields/CheckDate01__c.field-meta.xml
<CustomField>
    <fullName>CheckDate01__c</fullName>
    <label>見積書提出伺い完了日</label>
    <type>Date</type>
</CustomField>