force-app/main/default/objects/Opportunity/fields/CheckDate02__c.field-meta.xml
<CustomField>
    <fullName>CheckDate02__c</fullName>
    <label>応札伺い完了日</label>
    <type>Date</type>
</CustomField>