force-app/main/default/objects/Opportunity/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>最終顧客が不明の場合は「不明」、未定の場合は「未定」を選択ください。</inlineHelpText>
    <label>最終顧客</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>登録/選択した取引先が事業所レコードタイプではありません。
取引先を新規作成する場合は、事業所として登録してください。</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>案件 (最終顧客)</relationshipLabel>
    <relationshipName>Client</relationshipName>
    <type>Lookup</type>
</CustomField>