force-app/main/default/objects/Opportunity/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <formula>Client__r.Name</formula>
    <label>最終顧客</label>
    <type>Text</type>
</CustomField>