force-app/main/default/objects/Opportunity/fields/ClientRemarks__c.field-meta.xml
<CustomField>
    <fullName>ClientRemarks__c</fullName>
    <label>最終顧客 備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>