force-app/main/default/objects/Opportunity/fields/CloseDate_report1__c.field-meta.xml
<CustomField>
    <fullName>CloseDate_report1__c</fullName>
    <description>受注予定日と同じ項目です。レポートで表示させる為作成。</description>
    <formula>CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注予定日（レポート用）</label>
    <type>Date</type>
</CustomField>