force-app/main/default/objects/Opportunity/fields/CloseDate_yyyymm__c.field-meta.xml
<CustomField>
    <fullName>CloseDate_yyyymm__c</fullName>
    <formula>IF( ISNULL(CloseDate), &quot;&quot;, TEXT( YEAR(CloseDate) )  +   LPAD(TEXT(MONTH(CloseDate)), 2 , &quot;0&quot;))</formula>
    <label>受注予定年月(yyyymm)</label>
    <type>Text</type>
</CustomField>