force-app/main/default/objects/Opportunity/fields/CloseDate_yyyymmdd__c.field-meta.xml
<CustomField>
    <fullName>CloseDate_yyyymmdd__c</fullName>
    <formula>IF( ISNULL(CloseDate), &quot;&quot;, TEXT( YEAR(CloseDate) )  +   LPAD(TEXT(MONTH(CloseDate)), 2 , &quot;0&quot;)   +  LPAD(TEXT(DAY(CloseDate)), 2 , &quot;0&quot;))</formula>
    <label>受注予定日(yyyymmdd)</label>
    <type>Text</type>
</CustomField>