force-app/main/default/objects/Opportunity/fields/CommercialDistribution3__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商流3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <infoMessage>登録/選択した取引先が事業所レコードタイプではありません。
取引先を新規作成する場合は、事業所として登録してください。</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>案件 (商流3)</relationshipLabel>
    <relationshipName>CommercialDistribution3Opps</relationshipName>
    <type>Lookup</type>
</CustomField>