force-app/main/default/objects/Opportunity/fields/CommercialDistribution3_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution3_Remarks__c</fullName>
    <label>商流3 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>