force-app/main/default/objects/Opportunity/fields/CommercialDistribution4_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution4_Remarks__c</fullName>
    <label>商流4 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>