force-app/main/default/objects/Opportunity/fields/CommercialDistribution_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistribution_Remarks__c</fullName>
    <label>商流備考</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>