force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>受注社が取引先に無い場合、新規取引先作成を事務局へ依頼下さい。
作成されるまでの間、暫定的に「その他」を選択頂くか、受注社が不明の場合は、「不明」を選択下さい。</inlineHelpText>
    <label>受注社</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>案件 (取引先)</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>