force-app/main/default/objects/Opportunity/fields/CompetitorOther__c.field-meta.xml
<CustomField>
    <fullName>CompetitorOther__c</fullName>
    <label>受注社その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>