force-app/main/default/objects/Opportunity/fields/ConstructionContent__c.field-meta.xml
<CustomField>
    <fullName>ConstructionContent__c</fullName>
    <label>工事内容</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>