force-app/main/default/objects/Opportunity/fields/ConstructionDistinction__c.field-meta.xml
<CustomField>
    <fullName>ConstructionDistinction__c</fullName>
    <label>工事区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新設</fullName>
            </value>
            <value>
                <fullName>更新（自社既設）</fullName>
            </value>
            <value>
                <fullName>更新（他社既設）</fullName>
            </value>
            <value>
                <fullName>更新（蓄電池）</fullName>
            </value>
            <value>
                <fullName>増設</fullName>
            </value>
            <value>
                <fullName>修繕・改造</fullName>
            </value>
            <value>
                <fullName>保守</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>新設（建屋新設）</fullName>
                <isActive>false</isActive>
                <label>新設（建屋新設）</label>
            </value>
            <value>
                <fullName>新設（建屋既存）</fullName>
                <isActive>false</isActive>
                <label>新設（建屋既存）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>