force-app/main/default/objects/Opportunity/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <formula>TEXT(Region__r.CountryName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>国名</label>
    <type>Text</type>
</CustomField>