force-app/main/default/objects/Opportunity/fields/CurrencyOption__c.field-meta.xml
<CustomField>
    <fullName>CurrencyOption__c</fullName>
    <label>円建て/外貨建て</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ForeignCurrencyDenominated</valueSetName>
    </valueSet>
</CustomField>