force-app/main/default/objects/Opportunity/fields/Current_FinalWC1__c.field-meta.xml
<CustomField>
    <fullName>Current_FinalWC1__c</fullName>
    <formula>IF( ISNULL(Result_TotalWC__c), IF( ISNULL(Latest_TotalWC__c), IF( ISNULL(Order_TotalWC__c), TotalWC__c, Order_TotalWC__c), Latest_TotalWC__c), Result_FinalWC__c)</formula>
    <label>WC(最終&gt;SR最新&gt;SR受注時&gt;商談)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>