force-app/main/default/objects/Opportunity/fields/Current_GP1__c.field-meta.xml
<CustomField>
    <fullName>Current_GP1__c</fullName>
    <formula>IF( ISNULL(Result_TotalCP__c), IF( ISNULL(Latest_TotalCP__c), IF( ISNULL(Order_TotalCP__c), GP__c, Order_GP__c), Latest_GP__c), Result_SalesGP__c)</formula>
    <label>粗利(実績&gt;SR最新&gt;SR受注時&gt;商談)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>