force-app/main/default/objects/Opportunity/fields/Current_Margin__c.field-meta.xml
<CustomField>
    <fullName>Current_Margin__c</fullName>
    <formula>IF( ISNULL(Result_Margin__c), IF( ISNULL(Latest_Margin__c), IF( ISNULL(Order_Margin__c), Margin__c, Order_Margin__c), Latest_Margin__c), Result_Margin__c)</formula>
    <label>手数料(実績&gt;SR最新&gt;SR受注時&gt;商談)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>