force-app/main/default/objects/Opportunity/fields/Current_TotalCP2__c.field-meta.xml
<CustomField>
    <fullName>Current_TotalCP2__c</fullName>
    <formula>IF( ISNULL(Result_TotalCP__c), IF( ISNULL(Latest_Forecast_TotalCP__c), IF( ISNULL(Order_Forecast_TotalCP__c), TotalCP__c, Order_Forecast_TotalCP__c), Latest_Forecast_TotalCP__c), Result_TotalCP__c)</formula>
    <label>CP(実績&gt;最終予想最新&gt;最終予想受注時&gt;商談)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>