force-app/main/default/objects/Opportunity/fields/Current_TotalWC2__c.field-meta.xml
<CustomField>
    <fullName>Current_TotalWC2__c</fullName>
    <formula>IF( ISNULL(Result_TotalWC__c), IF( ISNULL(Latest_Forecast_TotalWC__c), IF( ISNULL(Order_Forecast_TotalWC__c), TotalWC__c, Order_Forecast_TotalWC__c), Latest_Forecast_TotalWC__c), Result_TotalWC__c)</formula>
    <label>WC(実績&gt;最終予想最新&gt;最終予想受注時&gt;商談)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>