force-app/main/default/objects/Opportunity/fields/Current_WCPercent1__c.field-meta.xml
<CustomField>
    <fullName>Current_WCPercent1__c</fullName>
    <formula>IF( OR(ISNULL(Result_TotalCP__c),ISNULL(Result_TotalWC__c )), IF( OR(ISNULL(Latest_TotalCP__c),ISNULL(Latest_TotalWC__c)), IF( OR(ISNULL(Order_TotalCP__c),ISNULL(Order_TotalWC__c )), WCPercent__c, Order_WCPercent__c), Latest_WCPercent__c), Result_WCPercent__c)</formula>
    <label>WC率(実績&gt;SR最新&gt;SR受注時&gt;商談)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>