force-app/main/default/objects/Opportunity/fields/CustomerBudget__c.field-meta.xml
<CustomField>
    <fullName>CustomerBudget__c</fullName>
    <label>客先予算</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>