force-app/main/default/objects/Opportunity/fields/CustomerBudgetRemarks__c.field-meta.xml
<CustomField>
    <fullName>CustomerBudgetRemarks__c</fullName>
    <label>予算 備考</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>