force-app/main/default/objects/Opportunity/fields/DeleteReason__c.field-meta.xml
<CustomField>
    <fullName>DeleteReason__c</fullName>
    <label>削除要因</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>重複削除</fullName>
            </value>
            <value>
                <fullName>商談消滅</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>不明（フォロー不足）</fullName>
                <isActive>false</isActive>
                <label>不明（フォロー不足）</label>
            </value>
            <value>
                <fullName>不明（担当者異動）</fullName>
                <isActive>false</isActive>
                <label>不明（担当者異動）</label>
            </value>
            <value>
                <fullName>商談延期</fullName>
                <isActive>false</isActive>
                <label>商談延期</label>
            </value>
            <value>
                <fullName>某所削除</fullName>
                <isActive>false</isActive>
                <label>某所削除</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>