force-app/main/default/objects/Opportunity/fields/DeleteReason_Other__c.field-meta.xml
<CustomField>
    <fullName>DeleteReason_Other__c</fullName>
    <label>削除要因その他</label>
    <type>TextArea</type>
</CustomField>