force-app/main/default/objects/Opportunity/fields/DemanDepartment__c.field-meta.xml
<CustomField>
    <fullName>DemanDepartment__c</fullName>
    <label>需要部門</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>官公庁</fullName>
            </value>
            <value>
                <fullName>地方自治体</fullName>
            </value>
            <value>
                <fullName>下水道事業団</fullName>
            </value>
            <value>
                <fullName>金融</fullName>
            </value>
            <value>
                <fullName>通信</fullName>
            </value>
            <value>
                <fullName>IDC</fullName>
                <label>IDC（通信キャリア系）</label>
            </value>
            <value>
                <fullName>IDC2</fullName>
                <label>IDC（通信キャリア以外：国内系）</label>
            </value>
            <value>
                <fullName>IDC3</fullName>
                <label>IDC（通信キャリア以外：外資系）</label>
            </value>
            <value>
                <fullName>不動産</fullName>
            </value>
            <value>
                <fullName>放送・報道</fullName>
            </value>
            <value>
                <fullName>製造業</fullName>
            </value>
            <value>
                <fullName>病院</fullName>
            </value>
            <value>
                <fullName>学校</fullName>
            </value>
            <value>
                <fullName>公営競技</fullName>
            </value>
            <value>
                <fullName>スタジアム・アリーナ</fullName>
            </value>
            <value>
                <fullName>エネルギー事業</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>