force-app/main/default/objects/Opportunity/fields/DemandOf__c.field-meta.xml
<CustomField>
    <fullName>DemandOf__c</fullName>
    <label>官需／民需</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>官需</fullName>
            </value>
            <value>
                <fullName>民需</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>