force-app/main/default/objects/Opportunity/fields/DistributionChannelsPattern__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannelsPattern__c</fullName>
    <inlineHelpText>施設BUは入力必須です。</inlineHelpText>
    <label>商流パターン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>施主→当社</fullName>
            </value>
            <value>
                <fullName>施主→代理店→当社</fullName>
            </value>
            <value>
                <fullName>施主→GC→SC→当社</fullName>
            </value>
            <value>
                <fullName>施主→GC→SC→代理店→当社</fullName>
            </value>
            <value>
                <fullName>施主→GC→当社</fullName>
            </value>
            <value>
                <fullName>施主→GC→代理店→当社</fullName>
            </value>
            <value>
                <fullName>施主→SC→当社</fullName>
            </value>
            <value>
                <fullName>施主→SC→代理店→当社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>