force-app/main/default/objects/Opportunity/fields/EstablishedCompany__c.field-meta.xml
<CustomField>
    <fullName>EstablishedCompany__c</fullName>
    <label>既設社</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ConstructionDistinction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>三菱</fullName>
            </value>
            <value>
                <fullName>日立</fullName>
            </value>
            <value>
                <fullName>東芝</fullName>
            </value>
            <value>
                <fullName>富士電機</fullName>
            </value>
            <value>
                <fullName>明電舎</fullName>
            </value>
            <value>
                <fullName>日新電機</fullName>
            </value>
            <value>
                <fullName>東光高岳</fullName>
            </value>
            <value>
                <fullName>安川電機</fullName>
            </value>
            <value>
                <fullName>シンフォニア</fullName>
            </value>
            <value>
                <fullName>メタウォーター</fullName>
            </value>
            <value>
                <fullName>横河電機</fullName>
            </value>
            <value>
                <fullName>GSユアサ</fullName>
            </value>
            <value>
                <fullName>ヤンマー</fullName>
            </value>
            <value>
                <fullName>川崎重工業</fullName>
            </value>
            <value>
                <fullName>IHI原動機</fullName>
            </value>
            <value>
                <fullName>アズビル</fullName>
            </value>
            <value>
                <fullName>ジョンソンコントロールズ</fullName>
            </value>
            <value>
                <fullName>パナソニック</fullName>
            </value>
            <value>
                <fullName>ソニー</fullName>
            </value>
            <value>
                <fullName>ダクトロニクス</fullName>
            </value>
            <value>
                <fullName>JRC</fullName>
            </value>
            <value>
                <fullName>富士通</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>国際電気</fullName>
            </value>
            <value>
                <fullName>荏原電産</fullName>
            </value>
            <value>
                <fullName>愛知時計</fullName>
            </value>
            <value>
                <fullName>沖電気工業</fullName>
            </value>
            <value>
                <fullName>コイト</fullName>
            </value>
            <value>
                <fullName>名古屋電機工業</fullName>
            </value>
            <value>
                <fullName>星和電機</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>