force-app/main/default/objects/Opportunity/fields/EstimatedIssuedCP_02__c.field-meta.xml
<CustomField>
    <fullName>EstimatedIssuedCP_02__c</fullName>
    <label>発行CP②×係数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>