force-app/main/default/objects/Opportunity/fields/EstimatedIssuedDate_01__c.field-meta.xml
<CustomField>
    <fullName>EstimatedIssuedDate_01__c</fullName>
    <label>発行予定日①</label>
    <type>Date</type>
</CustomField>