force-app/main/default/objects/Opportunity/fields/EstimatedIssuedDate_02__c.field-meta.xml
<CustomField>
    <fullName>EstimatedIssuedDate_02__c</fullName>
    <label>発行予定日②</label>
    <type>Date</type>
</CustomField>