force-app/main/default/objects/Opportunity/fields/EstimatedIssuedDate_03__c.field-meta.xml
<CustomField>
    <fullName>EstimatedIssuedDate_03__c</fullName>
    <label>発行予定日③</label>
    <type>Date</type>
</CustomField>